vlib/v/checker/tests/dec_lit_has_space_err.out
vlib/v/checker/tests/dec_lit_has_space_err.v:2:18: error: unneeded spaces before digit `7`
    1 | fn main() {
    2 |     a := 123456  789
      |                  ^
    3 | }
