vlib/v/checker/tests/dec_lit_has_space_err.vv
fn main() {
    a := 123456  789
}
